header fixes on small screens

--- a/src/layout/_header.scss
+++ b/src/layout/_header.scss
@@ -49,14 +49,14 @@
 	margin-top: $navbar-links-top-offset;
 	font-size: $header-li-font-size;
 
-	@media(min-width:$screen-sm-min) {
+	@media(min-width:$screen-sm-max) {
 		@include display(flex);
 		@include align-items(center);
 		@include flex-wrap(wrap);
 		float: right;
 	}
 
-	@media(max-width:$screen-sm-min) {
+	@media(max-width:$screen-sm-max) {
 		text-align: center;
 	}
 
@@ -64,7 +64,7 @@
 		list-style-type: none;
 		padding: 10px;
 
-		@media(min-width:$screen-sm-min) {
+		@media(min-width:$screen-sm-max) {
 			display: inline-block;
 			padding: 15px $header-li-padding-hor;
 		}
@@ -155,7 +155,7 @@
 }
 
 .navigation {
-	@media(min-width:$screen-sm-min) {
+	@media(min-width:$screen-sm-max) {
 		@include display(flex);
 		@include align-items(center);
 		@include justify-content(space-between);
@@ -176,7 +176,7 @@
 		margin-top: 20px;
 		padding: 0;
 
-		@media(min-width:$screen-sm-min) {
+		@media(min-width:$screen-sm-max) {
 			border-right: 1px solid rgba($navbar-text-color, 0.15);
 			padding: 0;
 			padding-right: $header-li-padding-hor;
@@ -228,13 +228,13 @@
 	@include flex-shrink(0);
 	@include flex-grow(1);
 
-	@media(min-width:$screen-sm-min) {
+	@media(min-width:$screen-sm-max) {
 		@include display(flex);
 		@include align-items(center);
 		float: right;
 	}
 
-	@media(max-width:$screen-sm-min) {
+	@media(max-width:$screen-sm-max) {
 		margin-top: 20px;
 	}
 
@@ -302,7 +302,7 @@
 }
 
 .navbar .container-bs {
-	@media(min-width: $screen-sm-min) {
+	@media(min-width: $screen-sm-max) {
 		@include display(flex);
 		@include align-items(center);
 	}
